# range-encoding-rs

./: Cargo.toml  README.md
src/: decode.rs  encode.rs  lib.rs  opus_encode.rs  util.rs
src/opus/: decode.rs  encode.rs  imported_decode.rs  imported_encode.rs
tests/: simple.rs
