[package]
name = "range-encoding"
version = "0.1.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]
description = "An implementation of range encoding (entropy coding), extracted from Opus."
readme = "README.md"
homepage = "https://github.com/binast/range-encoding-rs"
repository = "https://github.com/binast/range-encoding-rs"
keywords = ["compression", "opus", "entropy"]
categories = ["algorithms", "compression"]
license = "BSD3"

[badges]
travis-ci = { repository = "https://github.com/binast/range-encoding-rs", branch = "master" }

[dependencies]
libc = "*"
log = "*"

[dev-dependencies]
env_logger = "*"
rand = "0.5.5"
