[package]
name = "range-encoding"
version = "0.2.1"
authors = ["David Teller <D.O.Teller@gmail.com>"]
description = "An implementation of range encoding (entropy coding), extracted from Opus."
readme = "README.md"
homepage = "https://github.com/binast/range-encoding-rs"
repository = "https://github.com/binast/range-encoding-rs"
keywords = ["compression", "opus", "entropy"]
categories = ["algorithms", "compression"]
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "binast/range-encoding-rs", branch = "master" }

[dependencies]
log = "^0.4"


[dev-dependencies]
env_logger = "^0.5"
rand = "0.5.5"
